k8s/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incidents-ingress
  namespace: incidents
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /incidents
            pathType: Prefix
            backend:
              service:
                name: incidents-api
                port:
                  number: 80
          - path: /albedo
            pathType: Prefix
            backend:
              service:
                name: albedo
                port:
                  number: 80
